@@ -1,7 +1,7 @@
 /* -----------------------------------------------------------------------
 
 
- Blueprint CSS Framework 1.0
+ Blueprint CSS Framework 1.0.1
  http://blueprintcss.org
 
    * Copyright (c) 2007-Present. See LICENSE for more info.
